  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.14.2.2 2002/11/24 17:49:17 pfeffi Exp $
==========================================================================

2.9000
------
2.9001.478  new: os2: enabled command line options: -pause, -unpause, -restart

2.9001.477  fix: os2: installation complete rewritten (#2061)
            fix: os2: keyboard hangs, random colors after -config or -help in OS/2 fullscreen session
            new: os2: "pause-when-running" enabled
            new: os2: more command line options (-shutdown, ...)

2.9000.475  new: all: contest rc5-72
            chg: all: new buffer format (incompatible with previous 
                      clients and proxies)
            fix: all: "pause-when-running": whitespaces between program
                      name and "|" were not stripped correctly.

 
2.8000
------

2.8019.473  fix: static: rebuilt all static clients to fix CA-2002-19:
                    "Buffer Overflow in Multiple DNS Resolver Libraries"
            chg: all: increased buff-in.* limit to 2000 packets
            imp: x86: improved P4 RC5 core (ak-p7) (#2542)
            new: x86: detect latest Pentium III (#2778) and Athlon XP (#2783)
            chg: linux: enable /proc/apm support for non-x86 (#2643)
            fix: all: processed RC5 random blocks even if RC5 was disabled
            fix: amigaos: fixed problems with font requester opening in
                          GUI prefs window when clicking other gadgets
            imp: amigaos: can be shutdown by pressing escape key in GUI

2.8018.472  fix: macosx: fix crash in battery pause code from #2465 (#2615)